@@ -1,4 +1,5 @@
 use inc::Module::Install;
+use Module::Install::AuthorRequires;
 
 name 'MooseX-Traits';
 all_from 'lib/MooseX/Traits.pm';
@@ -13,5 +14,6 @@ build_requires 'Moose';
 build_requires 'Test::Exception';
 build_requires 'Test::More';
 build_requires 'ok';
+author_requires 'MooseX::Role::Parameterized' => '0.13';
 
 WriteAll();
