@@ -1,3 +1,6 @@
+        - Require newer version of MX::Role::Parameterized in the parameterized
+          role test. (RT#49873).
+
 0.09   Tue Apr  6 22:51:40 CDT 2010
         - Class->with_traits(...)->new is now preferred over
           Class->new_with_traits(...).
